--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -15,7 +15,7 @@ services:
     environment:
       #RANDOM STRONG PASSWORD
       POSTGRES_USER: task-management-user
-      POSTGRES_PASSWORD: qi4CbEd6T09bJBfg
+      POSTGRES_PASSWORD: qi4CbEd6T09bJBfg # Update this password
       POSTGRES_DB: task-management
 
   adminer:
